# CS2D-grupo-13

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  Make  Makefile  README.md  client.sh  game.sh  install.sh  main.cpp  makefileclient  mari  mari.c  mari.cpp  mi_app  sdl  server.sh  uninstall.sh
assets/: configView.yaml  entrenamiento.txt  music.yaml  pueblito_azteca.txt  routes.yaml
assets/maps_colliders/: pueblito_azteca_colliders.txt
client/: CMakeLists.txt  Makefile  client.cpp  client.h  clientMain.cpp  controller.cpp  controller.h  gameView.cpp  gameView.h  lobbyView.cpp  lobbyView.h  main.cpp  makefile  manageTexture.cpp  manageTexture.h  mapView.cpp  mapView.h  menuView.cpp  menuView.h  moc_lobbyView.cpp  playerView.cpp  playerView.h  protocoloClient.cpp  protocoloClient.h  scoreBoard.cpp  scoreBoard.h  sdl  soundConfig.cpp  soundConfig.h  soundConfig.tpp  tipos.h  vista.cpp  vista.cpp.autosave  vista.h
client/Qt/: ButtonsCreator.cpp  ButtonsCreator.h  StackNavigator.h  lobbyView.cpp  lobbyView.h  menuView.cpp  menuView.h  moc_menuView.cpp  scoreBoard.cpp  scoreBoard.h
client/SDL/: HUD.cpp  HUD.h  bomb.cpp  bomb.h  bombTimer.cpp  bombTimer.h  bullet.cpp  bullet.h  camera.cpp  camera.h  fieldOfView.cpp  fieldOfView.h  gameConfig.cpp  gameConfig.h  gameView.cpp  gameView.h  manageTexture.cpp  manageTexture.h  managerEvent.cpp  managerEvent.h  mapView.cpp  mapView.h  playerView.cpp  playerView.h  quit_game_exception.h  renderizable.h  shopping.cpp  shopping.h  text.cpp  text.h  weaponView.cpp  weaponView.h
client/controller/: game.cpp  game.h  lobby_controller.h
client/controller/inputs/: command_handler.cpp  command_handler.h
client/model/: CMakeLists.txt  client_action.cpp  client_action.h  lobby.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h
cmake/: CompilerWarnings.cmake
common/: CMakeLists.txt  client_common_action.h  common.yaml  connection_closed_exception.h  constant_rate_loop.cpp  constant_rate_loop.h  game_image.h  game_info.h  liberror.cpp  liberror.h  lobby_action.h  lobby_types.h  player_command.h  player_command_types.h  player_types.h  queue.h  resolver.cpp  resolver.h  resolvererror.cpp  resolvererror.h  socket.cpp  socket.h  sound_image.h  thread.h  utility.cpp  utility.h
docs/: Game_UMLCode.txt  Weapons_UMLCode.txt  client_UMLCode.txt  server_UMLCode.txt
docs/class diagram/: client_protocol_diagram.txt
editor/: CMakeLists.txt  main.cpp
game/: Bullet.h  CMakeLists.txt  Colliders.cpp  Colliders.h  CollisionManager.h  Equipement.cpp  Equipement.h  FireableWeapon.cpp  FireableWeapon.h  GameImage.h  GameManager.cpp  GameManager.h  InterfaceGameManager.h  Makefile  Map.cpp  Map.h  Physics.cpp  Physics.h  Player.cpp  Player.h  PlayerTypes.cpp  PlayersTypes.h  Specials.h  Type.h  Weapon.h  game.cpp  game.h  juego  main.cpp
server/: CMakeLists.txt  acceptor.cpp  acceptor.h  client_action.cpp  client_action.h  client_handler.cpp  client_handler.h  functor_parse_client_action.cpp  functor_parse_client_action.h  game.cpp  game.h  game_loop.cpp  game_loop.h  games_monitor.cpp  games_monitor.h  main.cpp  player.cpp  player.h  player_action.cpp  player_action.h  protocol.cpp  protocol.h  receiver.cpp  receiver.h  sender.cpp  sender.h  server.cpp  server.h
server/client_handler/: CMakeLists.txt  client_handler.cpp  client_handler.h  game_loop.cpp  game_loop.h  games_monitor.h
server/game/: Bullet.h  CMakeLists.txt  Colliders.cpp  Colliders.h  CollisionManager.cpp  CollisionManager.h  Equipement.cpp  Equipement.h  Equipment.cpp  Equipment.h  FireableWeapon.cpp  FireableWeapon.h  GameConfig.cpp  GameConfig.h  GameConfig.yaml  GameException.h  GameManager.cpp  GameManager.h  GameZone.h  ICanInteract.h  IDropeableZone.h  IDroppable.h  IGameZone.h  ISpawneableZone.h  Makefile  Map.cpp  Map.h  MapExeption.h  Physics.h  Player.cpp  Player.h  PlayerType.cpp  PlayerType.h  SpecialWeapons.cpp  SpecialWeapons.h  Specials.cpp  Specials.h  Timer.h  TimerActions.h  Weapon.h  (+2 more)
server/game/Colliders/: CMakeLists.txt  Colliders.cpp  Colliders.h
server/game/Config/: CMakeLists.txt  GameConfig.cpp  GameConfig.h  GameConfig.yaml
server/game/Map/: CMakeLists.txt  CollisionManager.cpp  CollisionManager.h  IDroppableZone.h  IGameZone.h  ISoundZone.h  ISpawneableZone.h  Map.cpp  Map.h  MapConfig.cpp  MapConfig.h
server/game/Map/Maps/: Azteca.yaml  Desierto.yaml  Entrenamiento.yaml  MapConfig.cpp  MapConfig.h
server/game/Player/: CMakeLists.txt  Equipment.cpp  Equipment.h  ICanInteract.h  Player.cpp  Player.h  player_config.h  player_config.yaml
server/game/Sounds/: CMakeLists.txt  Sound.h  SoundManager.cpp  SoundManager.h  SoundShoot.h
server/game/Weapons/: CMakeLists.txt  FireableWeapon.cpp  FireableWeapon.h  IDroppable.h  IInteractuable.h  SpecialWeapons.cpp  SpecialWeapons.h  TimerWeapons.h  Weapon.h  WeaponFactory.cpp  WeaponFactory.h  fire_mode.cpp  fire_mode.h
server/game/Weapons/Guns/: Ak47.cpp  Ak47.h  Awp.cpp  Awp.h  BurstClock.h  CMakeLists.txt  Glock.cpp  Glock.h  Knife.cpp  Knife.h  M3.cpp  M3.h  NullWeapon.h
server/game/Weapons/Guns/FireMode/: Automatic.cpp  Automatic.h  BurstClock.h  CMakeLists.txt  FireMode.h  FireRateClock.h  SemiAutomatic.cpp  SemiAutomatic.h
server/game/Weapons/guns/: CMakeLists.txt  ak47.cpp  ak47.h  awp.cpp  awp.h  glock.cpp  glock.h  knife.cpp  knife.h  m3.cpp  m3.h  weapon_config.h  weapon_config.yaml
server/handlers/: CMakeLists.txt  game_loop.cpp  game_loop.h  games_monitor.cpp  games_monitor.h  handler.cpp  handler.h  (+4 more)
tests/: CMakeLists.txt  testProtocolServer.cpp  test_protocol_client.cpp  test_protocol_server.cpp
tests/mocks/: CMakeLists.txt  mock_droppable_zone.h  mock_game.h  mock_games_monitor.h  mock_player.h  mock_socket.h  mock_spawmeable_zone.h
tests/test_game/: CMakeLists.txt
tests/test_game/test_equipment/: CMakeLists.txt  test_equipment.cpp
tests/test_protocol/: CMakeLists.txt  test_protocol_client.cpp  test_protocol_server.cpp
tests/test_server/: CMakeLists.txt  test_server.cpp
tests/test_utility/: CMakeLists.txt  test_queue.cpp
(+44 files in other folders)
